[flake8]
exclude = .git,.nox
max-line-length = 119
select = B,C,E,F,W
ignore=B009,D102,E203,E501,W503

[isort]
profile=black

[mypy]
python_version = 3.8
warn_unused_configs = True
mypy_path=.
disallow_untyped_calls = False
show_error_codes = True

[mypy-oc_extras.*]
ignore_missing_imports = True

[metadata]
name = oc_extras
version = 0.3
author = Shagun Sodhani
author_email = sshagunsodhani@gmail.com
description = Common functions related to use of OmegaConf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shagunsodhani/oc_extras
project_urls =
    Bug Tracker = https://github.com/pypa/shagunsodhani/oc_extras/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    omegaconf>=2.0.0

[options.packages.find]
where = src
exclude=["*.tests", "*.tests.*", "tests.*", "tests", "docs", "docsrc"]